Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOvgXU3ma8aVUYLTAWZpFwE",
+      "authorship_tag": "ABX9TyPC6p+TU/I7FlN0nHrFOTeH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -703,15 +703,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QIkcriMJRtNh"
-      },
-      "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Eh0YyntvF0O-"
       },
       "source": [
@@ -1112,13 +1103,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WQO_woD2Tq2K",
-        "outputId": "c25122ad-330d-4394-fd98-2ec58c2a018f"
+        "id": "WQO_woD2Tq2K"
       },
       "source": [
+        "# >>=, <- とか使い方は実験してだいたい次のようなのだが\r\n",
+        "# モナド monado としての位置づけがよくわからない\r\n",
         "!echo $'this\\nis' | ghc -e 'getLine >>= putStrLn'\r\n",
         "!echo\r\n",
         "!echo $'this\\nis' | ghc -e 'putStrLn =<< getLine'\r\n",
@@ -1129,24 +1118,67 @@
         "!echo $'this\\nis' | ghc -e 'do {x <- getContents ; mapM_ putStrLn (lines(x))}'"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CG2ADvudnWAG",
+        "outputId": "92c000dd-9c0f-42fa-cf5c-e4e52e5aa51a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\r\n",
+        "!ghc -e ':t getLine'\r\n",
+        "!ghc -e ':t getContents'\r\n",
+        "!ghc -e ':t interact'\r\n",
+        "!ghc -e ':t map'\r\n",
+        "!ghc -e ':t mapM'\r\n",
+        "!ghc -e ':t mapM_'\r\n",
+        "!ghc -e ':k IO'\r\n",
+        "!ghc -e ':k IO String'\r\n",
+        "!ghc -e ':k Traversable'\r\n",
+        "!ghc -e ':k Foldable'\r\n"
+      ],
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "this\n",
-            "\n",
-            "this\n",
-            "\n",
-            "this\n",
-            "\n",
-            "\"this\"\n",
-            "\"is\"\n",
-            "this\n",
-            "is\n"
+            "getLine :: IO String\n",
+            "getContents :: IO String\n",
+            "interact :: (String -> String) -> IO ()\n",
+            "map :: (a -> b) -> [a] -> [b]\n",
+            "mapM :: (Monad m, Traversable t) => (a -> m b) -> t a -> m (t b)\n",
+            "mapM_ :: (Monad m, Foldable t) => (a -> m b) -> t a -> m ()\n",
+            "IO :: * -> *\n",
+            "IO String :: *\n",
+            "Traversable :: (* -> *) -> Constraint\n",
+            "Foldable :: (* -> *) -> Constraint\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Da88msUHo10X"
+      },
+      "source": [
+        "# 実験\r\n",
+        "!ghc -e ':t (<*>)'\r\n",
+        "!ghc -e ':t (<$>)'\r\n",
+        "!ghc -e ':k Applicative'\r\n",
+        "!ghc -e ':k Functor'\r\n",
+        "# 次のはエラーになる\r\n",
+        "!ghc -e ':t (<<=)'\r\n",
+        "!ghc -e ':t (<-)'"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1184,19 +1216,25 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i0HK2HFzVMOP",
-        "outputId": "f1943810-76f9-4f0f-d6ef-94388dbb920f"
+        "outputId": "adf0dd7f-b0c2-438e-e532-0cee6c7f472d"
       },
       "source": [
         "# <$> はファンクター 関手 かんしゅ\r\n",
-        "!echo $'John\\nMike' | ghc -e 'map (\"hello \" ++).lines <$> getContents'"
+        "!echo $'John\\nMike' | ghc -e 'map (\"hello \" ++).lines <$> getContents'\r\n",
+        "!ghc -e ':t (<$>)'\r\n",
+        "!ghc -e ':k Functor'\r\n"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\n",
-            "[\"hello John\",\"hello Mike\"]\n"
+            "[\"hello John\",\"hello Mike\"]\n",
+            "(<$>) :: Functor f => (a -> b) -> f a -> f b\n",
+            "Functor :: (* -> *) -> Constraint\n",
+            "(<$>) :: Functor f => (a -> b) -> f a -> f b\n",
+            "  \t-- Defined in ‘Data.Functor’\n",
+            "infixl 4 <$>\n"
           ],
           "name": "stdout"
         }
@@ -1248,19 +1286,53 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GLZ5h8Krf1B0",
-        "outputId": "2f7d4745-0575-4afd-b48c-a6dc77849e7f"
+        "outputId": "75081138-2a20-4aa7-d696-81f3ea6a5ee4"
       },
       "source": [
         "# <- で IO String から String に変換する\r\n",
         "# lines で行に分割\r\n",
         "!echo $'10 20\\n30 40\\n50 60' | ghc -e 'do {input <- getContents; let strList = lines(input) in print strList}'"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[\"10 20\",\"30 40\",\"50 60\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4HJ3Yi2UriBD"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Wim9xYyQrJH7",
+        "outputId": "16a4f29a-a909-4dc4-c48c-c44b690af87d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 上の let in はなぜか\r\n",
+        "# writefileで実験してみたい"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:71: error: parse error on input ‘;’\n"
           ],
           "name": "stdout"
         }
