Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPsYYH+0Jl//Wd7PzSw+hyw",
+      "authorship_tag": "ABX9TyPolMCCBsitcAxjDu1gpaP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -149,11 +149,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XqJ_b0VCCNAX",
-        "outputId": "4f7ea86d-9942-47e9-8547-f6f6c2abbca9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "XqJ_b0VCCNAX"
       },
       "source": [
         "# pi は始めから Double で入っている\r\n",
@@ -166,22 +162,8 @@
         "!ghc -e '3.141592653589793e+38::Float'\r\n",
         "!ghc -e '3.141592653589793e+100::Float' #=> Infinity\r\n"
       ],
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "3.141592653589793\n",
-            "pi :: Floating a => a\n",
-            "3.141592653589793\n",
-            "3.1415927\n",
-            "3.1415927e38\n",
-            "3.1415927e38\n",
-            "Infinity\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -227,6 +209,75 @@
           "text": [
             "isInfinite :: RealFloat a => a -> Bool\n",
             "isNaN :: RealFloat a => a -> Bool\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZFWg7MMekyIG",
+        "outputId": "3a643481-194e-4522-991d-af4bf5d90377",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e '0/0' #=> NaN\r\n",
+        "!ghc -e 'isNaN (0/0)' #=> True"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "NaN\n",
+            "True\n",
+            "1.0 :: Fractional t => t\n",
+            "\n",
+            "<interactive>:1:1: error:\n",
+            "    • Data constructor not in scope: Infinite\n",
+            "    • Perhaps you meant variable ‘isInfinite’ (imported from Prelude)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qojvTTT-lKSU",
+        "outputId": "84712288-510f-4e33-cd1c-3d9b5e85ca28",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 整数割り算\r\n",
+        "!ghc -e '17 `div` 3' #=> 5\r\n",
+        "!ghc -e '17 `mod` 3' #=> 2\r\n",
+        "!ghc -e ':t (%)' #=> error not in scope\r\n",
+        "!ghc -e ':t mod' #=> mod :: Integral a => a -> a -> a\r\n",
+        "!ghc -e '12/3' #=> 4.0\r\n",
+        "!ghc -e '12/3::Int' #=> error No instance for (Fractional Int) arising from a use of ‘/’"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "2\n",
+            "\n",
+            "<interactive>:1:1: error: Variable not in scope: %\n",
+            "mod :: Integral a => a -> a -> a\n",
+            "4.0\n",
+            "\n",
+            "<interactive>:0:1: error:\n",
+            "    • No instance for (Fractional Int) arising from a use of ‘/’\n",
+            "    • In the expression: 12 / 3 :: Int\n",
+            "      In an equation for ‘it’: it = 12 / 3 :: Int\n"
           ],
           "name": "stdout"
         }
