--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPolMCCBsitcAxjDu1gpaP1",
+      "authorship_tag": "ABX9TyNZvZXRp+pqnTlY8xawqCGK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -217,11 +217,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZFWg7MMekyIG",
-        "outputId": "3a643481-194e-4522-991d-af4bf5d90377",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZFWg7MMekyIG",
+        "outputId": "3a643481-194e-4522-991d-af4bf5d90377"
       },
       "source": [
         "!ghc -e '0/0' #=> NaN\r\n",
@@ -247,11 +247,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qojvTTT-lKSU",
-        "outputId": "84712288-510f-4e33-cd1c-3d9b5e85ca28",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "qojvTTT-lKSU"
       },
       "source": [
         "# 整数割り算\r\n",
@@ -262,26 +258,46 @@
         "!ghc -e '12/3' #=> 4.0\r\n",
         "!ghc -e '12/3::Int' #=> error No instance for (Fractional Int) arising from a use of ‘/’"
       ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "5\n",
-            "2\n",
-            "\n",
-            "<interactive>:1:1: error: Variable not in scope: %\n",
-            "mod :: Integral a => a -> a -> a\n",
-            "4.0\n",
-            "\n",
-            "<interactive>:0:1: error:\n",
-            "    • No instance for (Fractional Int) arising from a use of ‘/’\n",
-            "    • In the expression: 12 / 3 :: Int\n",
-            "      In an equation for ‘it’: it = 12 / 3 :: Int\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UAYqD3CJ-_Zh"
+      },
+      "source": [
+        "# Int8 とか\r\n",
+        "!ghc -e 'minBound::Data.Int.Int8' #=> -128\r\n",
+        "!ghc -e 'minBound::Data.Int.Int16' \r\n",
+        "!ghc -e 'minBound::Data.Int.Int32' \r\n",
+        "!ghc -e 'minBound::Data.Int.Int64' \r\n",
+        "!ghc -e '1234::Word' \r\n",
+        "!ghc -e 'minBound::Data.Word.Word8'\r\n",
+        "!ghc -e 'maxBound::Data.Word.Word8'\r\n",
+        "!ghc -e 'maxBound::Data.Word.Word16'\r\n",
+        "!ghc -e 'maxBound::Data.Word.Word32'\r\n",
+        "!ghc -e 'maxBound::Data.Word.Word64'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qBd2bBg0AYV1"
+      },
+      "source": [
+        "# Bool\r\n",
+        "!ghc -e 'True::Bool'\r\n",
+        "!ghc -e 'not False'\r\n",
+        "!ghc -e 'False && True'\r\n",
+        "!ghc -e 'False || True'\r\n",
+        "!ghc -e '1 /= 1'\r\n",
+        "!ghc -e '(1::Int) == (1::Word)' #=> error Couldn't match expected type ‘Int’ with actual type ‘Word’"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -290,7 +306,7 @@
       },
       "source": [
         "# いまここ\r\n",
-        "p. 25"
+        "p. 26"
       ]
     }
   ]
