Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNULofdSKO2azbmqFQeYW2n",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPh39hI/gydvzIs9S49UDy+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +50,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -382,7 +383,7 @@
         "!ghc -e \"fromEnum 'あ'\" #=> 12354\r\n",
         "!ghc -e \"fromEnum ' '\" #=> 32"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +482,7 @@
         "# two\"\r\n",
         "# と本来は書ける。入力も出力も複数行になる。colabのコードセルではダメ。なるほど。"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -504,7 +505,7 @@
         "!ghc -e ':t putStrLn'\r\n",
         "!ghc -e 'putStrLn \"Hello\" :: IO ()'"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,10 +531,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "s5Qu-7RNYXZ1",
-        "outputId": "4bcd504a-e104-4018-a0c9-4bceee470201",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4bcd504a-e104-4018-a0c9-4bceee470201"
       },
       "source": [
         "# return は IO アクションを生成する\r\n",
@@ -543,7 +544,7 @@
         "!ghc -e 'return \"hello\" :: IO String'\r\n",
         "!ghc -e 'return \"はい\" :: IO String'"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -561,10 +562,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "GhIzn1z0ZQyr",
-        "outputId": "9ace3c04-f21b-48d1-f71f-686d91f23a3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9ace3c04-f21b-48d1-f71f-686d91f23a3e"
       },
       "source": [
         "# ボトム _|_ \r\n",
@@ -578,7 +579,7 @@
         "!ghc -e ':t (error \"some error\")::Int'\r\n",
         "!ghc -e ':t (let x=x in x)::Int'"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,16 +601,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "hnJnnnaebM6n",
-        "outputId": "765201b4-8bbe-4461-d275-2f597dd4aca0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "765201b4-8bbe-4461-d275-2f597dd4aca0"
       },
       "source": [
         "# ボトムを評価するとエラーになる\r\n",
         "!ghc -e 'undefined::Int'"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,23 +627,155 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IE8vBD3Obdq6",
-        "outputId": "c408cfb2-6b54-4e18-e9ba-a776dc28762d",
+        "id": "IE8vBD3Obdq6"
+      },
+      "source": [
+        "!ghc -e 'error \"some error\"'"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qEFVFTa8i5Hc"
+      },
+      "source": [
+        "# ボトムの使いどころ\r\n",
+        "# 型だけ決めておいて、実装をあとで行いたい場合\r\n",
+        "# checkTypes :: Term -> Type -> Bool\r\n",
+        "# checkTypes = undefined\r\n",
+        "# python の def : pass, class : pass に相当か\r\n",
+        "# もう一つは error を吐きたいとき\r\n",
+        "# if else error \"BUG!!!! y waz 0\"\r\n",
+        "# とか。"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcdHwTRHjKk7"
+      },
+      "source": [
+        "!ghc -e 'let checkTypes = undefined'"
+      ],
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jK9kKx8skMpB",
+        "outputId": "dacc643e-6f93-4b97-9ff9-d850197f4e50",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "!ghc -e 'error \"some error\"'"
+        "# main の中で裸の変数を使えるか => 使えない。let が必要。\r\n",
+        "# 逆に main の外で let は使えない。\r\n",
+        "# where の中でも let は使えず、変数は裸で使う。\r\n",
+        "%%writefile test.hs\r\n",
+        "main = do\r\n",
+        "   let x = 20\r\n",
+        "   let y = 30\r\n",
+        "   print (x+y)"
       ],
-      "execution_count": 54,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "<interactive>: some error\n",
-            "CallStack (from HasCallStack):\n",
-            "  error, called at <interactive>:0:1 in interactive:Ghci1\n"
+            "Overwriting test.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lkYRoUGrkbz4",
+        "outputId": "39b9ad86-641c-4af2-db3c-63b779f3addd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc test.hs"
+      ],
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "50\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V6Q47jlplUrU",
+        "outputId": "2bb12c5f-ab39-41e1-f358-3e555d18fd54",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ということは do なしで\r\n",
+        "!ghc -e 'let {x=20; y=30;} in print (x+y)'\r\n",
+        "# とするのが正しいのかも"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "50\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WdOKGSR4l62-",
+        "outputId": "eb02e591-ac5b-4168-96e1-f67f0f760f18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# where は使えるか\r\n",
+        "!ghc -e 'print (x+y) where {x=10;y=20})' #=> error: parse error on input ‘where’\r\n",
+        "!echo\r\n",
+        "# 次の例では使えている\r\n",
+        "!echo $'85 1.90' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
+        "!echo $'100 1.10' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
+        "!echo $'50 1.70' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
+        "!echo\r\n",
+        "# 単純化する\r\n",
+        "!ghc -e 'let {sayOk = sayOk02 where {sayOk02 = \"Ok\"}} in sayOk' "
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:0:13: error: parse error on input ‘where’\n",
+            "\n",
+            "\"Normal!\"\n",
+            "\"A whale\"\n",
+            "\"Emo!\"\n",
+            "\n",
+            "\"Ok\"\n"
           ],
           "name": "stdout"
         }
