Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPh39hI/gydvzIs9S49UDy+",
+      "authorship_tag": "ABX9TyOmHI9f1hbyKcOIktboU+6f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": null,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -661,17 +661,17 @@
       "source": [
         "!ghc -e 'let checkTypes = undefined'"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jK9kKx8skMpB",
-        "outputId": "dacc643e-6f93-4b97-9ff9-d850197f4e50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "dacc643e-6f93-4b97-9ff9-d850197f4e50"
       },
       "source": [
         "# main の中で裸の変数を使えるか => 使えない。let が必要。\r\n",
@@ -683,7 +683,7 @@
         "   let y = 30\r\n",
         "   print (x+y)"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,15 +698,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "lkYRoUGrkbz4",
-        "outputId": "39b9ad86-641c-4af2-db3c-63b779f3addd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "39b9ad86-641c-4af2-db3c-63b779f3addd"
       },
       "source": [
         "!runghc test.hs"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,17 +721,17 @@
       "cell_type": "code",
       "metadata": {
         "id": "V6Q47jlplUrU",
-        "outputId": "2bb12c5f-ab39-41e1-f358-3e555d18fd54",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2bb12c5f-ab39-41e1-f358-3e555d18fd54"
       },
       "source": [
         "# ということは do なしで\r\n",
         "!ghc -e 'let {x=20; y=30;} in print (x+y)'\r\n",
         "# とするのが正しいのかも"
       ],
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,11 +745,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WdOKGSR4l62-",
-        "outputId": "eb02e591-ac5b-4168-96e1-f67f0f760f18",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "WdOKGSR4l62-"
       },
       "source": [
         "# where は使えるか\r\n",
@@ -761,21 +757,42 @@
         "!echo $'50 1.70' | ghc -e $'getContents >>= let{bmiTell::(RealFloat a)=>a->a->String; bmiTell weight height |weight/height^2<=18.5=\"Emo!\"|weight/height^2<=25.0=\"Normal!\"|weight/height^2<=30.0=\"Fat!\"| otherwise = \"A whale\" where bmi = weight / height ^ 2 ;} in print.(\\[x, y] -> bmiTell x y).map (read::String->Float).words.concat.lines'\r\n",
         "!echo\r\n",
         "# 単純化する\r\n",
-        "!ghc -e 'let {sayOk = sayOk02 where {sayOk02 = \"Ok\"}} in sayOk' "
+        "!ghc -e 'let {sayOk = sayOk02 where {sayOk02 = \"Ok\"}} in sayOk' \r\n",
+        "# 今の理解。where は関数ではなく syntactic sugar なのでそれを理解して使う。 \r\n",
+        "# 使えるところしか使えない。 使えるところでは便利。 \r\n",
+        "# まずは let で書いて、let の中で使うのがいいのではないか。\r\n",
+        "# do とか。 パターンマッチングによる関数定義、とか。も便利だがそれなりの理解が大切と思う。"
       ],
-      "execution_count": 80,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "65TUegL9FdkC",
+        "outputId": "f7734343-ae98-4500-de92-69ec43c95d96",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# let\r\n",
+        "!ghci -e 'let {x=10;y=20} in x+y' #=> 30\r\n",
+        "!ghci -e '(let {x=10;y=20} in x+y) + (let x = 100 in x)' #=> 130\r\n",
+        "!ghci -e 'let x = 10 in let y = 20 in x + y' #=> 30\r\n",
+        "!ghci -e 'let {z=x+y;x=10;y=30} in z' #=> 40\r\n",
+        "!ghci -e 'let {z=x+y where {x=10;y=40}} in z' #=> 50"
+      ],
+      "execution_count": 89,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "\n",
-            "<interactive>:0:13: error: parse error on input ‘where’\n",
-            "\n",
-            "\"Normal!\"\n",
-            "\"A whale\"\n",
-            "\"Emo!\"\n",
-            "\n",
-            "\"Ok\"\n"
+            "30\n",
+            "130\n",
+            "30\n",
+            "40\n",
+            "50\n"
           ],
           "name": "stdout"
         }
@@ -788,7 +805,7 @@
       },
       "source": [
         "# いまここ\r\n",
-        "p. 34"
+        "p. 38"
       ]
     }
   ]
