--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNv2ythhRDQvmHFEw/oFBwT",
+      "authorship_tag": "ABX9TyMe+SUaKAEfOMfqvnCqOm4z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -808,10 +808,45 @@
         "!ghc -e 'let {incr n = n+1::Int} in incr 1'\r\n",
         "!ghc -e 'let {incr n = (n+1::Int)} in incr 2'\r\n",
         "!ghc -e 'let {incr n = (n+1::Int)} in incr (3)'\r\n",
-        "!ghc -e 'let {incr n = (n+1::Int)} in incr' # incr の型は Int -> Int だが"
+        "!ghc -e 'let {incr n = (n+1::Int)} in incr' # incr の型は Int -> Int ということがエラーメッセージでわかる\r\n",
+        "!ghc -e 'let {add x y  = (x + y :: Int)} in add' # add の型は Int -> Int -> Int\r\n",
+        "!ghc -e ':t (+)' #=> (+) :: Num a => a -> a -> a"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aDhl_x6BzzP0",
+        "outputId": "d92e03d2-deb6-4f53-edfa-3cb702994fce",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# ラムダ式 無名関数 は \\ と -> を使う\r\n",
+        "!ghc -e '(\\n -> n + 1 :: Int ) 10' #=> 11\r\n",
+        "!ghc -e ':t \\n -> n + 1 :: Int' #=> \\n -> n + 1 :: Int :: Int -> Int\r\n",
+        "!ghc -e 'let{incr = \\n -> n + 1 :: Int} in incr 12' #=> 13\r\n",
+        "!ghc -e 'let{add = \\m n -> m + n :: Int} in add 3 4' #=> 7\r\n",
+        "# カリー化\r\n",
+        "!ghc -e 'let{add = \\m -> \\n ->  m + n :: Int} in add 3 4' #=> 7"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "11\n",
+            "\\n -> n + 1 :: Int :: Int -> Int\n",
+            "13\n",
+            "7\n",
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -820,7 +855,7 @@
       },
       "source": [
         "# いまここ\r\n",
-        "p. 38"
+        "p. 42"
       ]
     }
   ]
