Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMgD/U4EFDJ39msecPX2xeW",
+      "authorship_tag": "ABX9TyP4YT+ikYzaWZtI25f+A3mh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "%%capture\r\n",
         "!apt install haskell-platform"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -862,7 +862,7 @@
         "!ghc -e ':t break' #=> break :: (a -> Bool) -> [a] -> ([a], [a])\r\n",
         "!ghc -e $'break (\\\\n -> n == \\'c\\') \"abcdef\"' #=> (\"ab\", \"cdef\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -889,7 +889,7 @@
         "!ghc -e 'let {f x = x^2; g x = x+1} in (f . g) 3' #=> 16\r\n",
         "!ghc -e 'let {f x = x^2; g x = x+1; twofunc = f.g} in twofunc 3' #=> 16"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +927,7 @@
         "# In Haskell, our 'space' is some type, and 'points' are values. \r\n",
         "# https://wiki.haskell.org/Pointfree#But_pointfree_has_more_points.21"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -945,10 +945,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "9ZoImaW59S0J",
-        "outputId": "17907bd4-e31b-4dc1-f141-a3e7c8f1e822",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "17907bd4-e31b-4dc1-f141-a3e7c8f1e822"
       },
       "source": [
         "# 実験\r\n",
@@ -957,7 +957,7 @@
         "# これはポイントフリーを多用するとわかりにくくなる、という例 p.44 だが、変数 2つを同時に処理できるのか!!!!\r\n",
         "# まるで APL の fork みたいではないか。 絶対使いみちある、と思う。"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -973,10 +973,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "s9BVHumdCQud",
-        "outputId": "ebc94385-8ae1-45c1-9a5e-e2e557090323",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ebc94385-8ae1-45c1-9a5e-e2e557090323"
       },
       "source": [
         "# 実験\r\n",
@@ -987,7 +987,7 @@
         "# 次のはどうか => 使えた\r\n",
         "!ghc -e $'flip break \"abcdef\" $ \\\\n -> n==\\'c\\'' #=> (\"ab\", \"cdef\")"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1004,13 +1004,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uXXsxeBzDzgq"
+        "id": "uXXsxeBzDzgq",
+        "outputId": "8ff22ec2-eeb4-441d-f68d-78829e9bc0f5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# $ の連結と合成関数\r\n"
+        "# $ の連結と合成関数\r\n",
+        "!ghc -e '(+) 1 $ (+) 2 $ (+) 3 $ 4' #=> 10\r\n",
+        "!ghc -e '((+) 1). ((+) 2) . ((+) 3) $ 4' #=> 10\r\n",
+        "# 私には後者、ポイントフリースタイルの方がわかりやすいが、この例ではあまり差がないし、両方すなおにわかるのがよい。"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "10\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1028,7 +1044,7 @@
       },
       "source": [
         "# いまここ\r\n",
-        "# p. 45"
+        "# p. 46"
       ],
       "execution_count": null,
       "outputs": []
