--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMbrcLzV0BH8Y+C6711Safs",
+      "authorship_tag": "ABX9TyPC9n9fOyXgG+sAc/FBjxzV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1058,15 +1058,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uQvzsg24HS2d",
-        "outputId": "cbf5e4e9-290f-4b90-8afb-1ede2414baff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uQvzsg24HS2d",
+        "outputId": "cbf5e4e9-290f-4b90-8afb-1ede2414baff"
       },
       "source": [
         "# seq を使う\r\n",
-        "!ghc -e 'let{hf::Int->Int;hf x = seq x 11} in print (hf(0 `div` 0))' #=> <interactive>: divide by zero\r\n",
+        "!ghc -e 'let{hf::Int->Int;hf x = seq x 1} in print (hf(0 `div` 0))' #=> <interactive>: divide by zero\r\n",
         "# ! を使う\r\n",
         "!ghc -e 'let{hf::Int->Int;hf x =1}in print (hf $! (0 `div` 0))' #=>  <interactive>: divide by zero"
       ],
@@ -1086,13 +1086,265 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "q1CkHaf8IwXU"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "q1CkHaf8IwXU",
+        "outputId": "02035501-68da-416c-efde-0836cfcd3c97"
       },
       "source": [
-        "#:set -XBangPatterns -- BangPattern を有効にする"
+        "# :set -XBangPatterns -- BangPattern を有効にする\r\n",
+        "# というような拡張機能はどうやって使うのか\r\n",
+        "# 実験\r\n",
+        "!ghc -XBangPatterns -e 'let { hf !x =  1} in print (hf (0 `div` 0))' #=> <interactive>: divide by zero\r\n",
+        "# -XStrict では全部先行評価になって、~ をつけた変数だけ遅延評価になる\r\n",
+        "!ghc -XStrict -e 'let { f x =  1; g ~x = 1} in print (f $ (0 `div` 0))' #=> <interactive>: divide by zero\r\n",
+        "!ghc -XStrict -e 'let { f x =  1; g ~x = 1} in print (g $ (0 `div` 0))' #=> 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<interactive>: divide by zero\n",
+            "<interactive>: divide by zero\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IEKuhXKQYiKU",
+        "outputId": "b00a66e4-a958-4138-ac9b-b51b408a8990",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 中置演算子 infix operator\r\n",
+        "!ghc -e '\"has\" `Data.List.isPrefixOf` \"haskell\"' #=> True"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sTPVAY02Y8N0",
+        "outputId": "790c3600-ff83-4f98-bad3-4b9b291945f8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# セクション 中置演算子の使い方\r\n",
+        "!ghc -e '(2 ^) 10' #=> 1024\r\n",
+        "!ghc -e '(^ 2) 10' #=> 100\r\n",
+        "!ghc -e '(2 -) 10' #=> -8\r\n",
+        "!ghc -e '(subtract 2) 10' #=> 8 \r\n",
+        "# subtract a b = b - a で定義されている"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1024\n",
+            "100\n",
+            "-8\n",
+            "8\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NGtv20dWaGpm",
+        "outputId": "1cbaf20e-eb18-48fd-c8f8-b188125b170a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# 実験\r\n",
+        "!ghc -e '(`Data.List.isPrefixOf` \"haskell\") \"has\"' #=> True"
+      ],
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MBlLu3VqbSUK",
+        "outputId": "b0309f1b-6c5a-4604-f999-53f469915354",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# main と do 式\r\n",
+        "# 標準入力から太郎と入れて、太郎さん、こんにちは!!!!と標準出力に出す\r\n",
+        "%%writefile test01.hs\r\n",
+        "main = getContents >>= putStrLn . (\\n -> n ++ \"さん、こんにちは!!!!\") . head . words"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DI69-uopcB24",
+        "outputId": "dbc95659-20ff-4b61-e1e5-8192def7f313",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo \"太郎\" |runghc test01.hs"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "太郎さん、こんにちは!!!!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EuxufZmTci6b",
+        "outputId": "1af9071f-fd0f-430e-dfc8-4616efdad7c6"
+      },
+      "source": [
+        "# main と do 式\r\n",
+        "# 標準入力から太郎と入れて、太郎さん、こんにちは!!!!と標準出力に出す\r\n",
+        "%%writefile test01.hs\r\n",
+        "main = do\r\n",
+        "    text <- getContents\r\n",
+        "    let text2 = head(words(text))\r\n",
+        "    let text3 = text2 ++ \"さん、こんばんは!\"\r\n",
+        "    putStrLn text3"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jfd4b4uwc3X6",
+        "outputId": "9db7a832-2407-449a-af22-185b25907639"
+      },
+      "source": [
+        "!echo \"太郎\" |runghc test01.hs"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "太郎さん、こんばんは!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I1x6BJbwdXO-",
+        "outputId": "5a1d5520-0cfd-40bf-de7a-e8aea8039c31"
+      },
+      "source": [
+        "# main と do 式\r\n",
+        "# 標準入力から太郎と入れて、太郎さん、こんにちは!!!!と標準出力に出す\r\n",
+        "%%writefile test01.hs\r\n",
+        "main = do\r\n",
+        "    text <- getContents\r\n",
+        "    putStrLn $ head(words(text)) ++ \"さん、おはよう!\""
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4qaTQOnFdU9n",
+        "outputId": "4d5ecf72-5c2e-4af9-b907-c0cad18d5b4e"
+      },
+      "source": [
+        "!echo \"太郎\" |runghc test01.hs"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "太郎さん、おはよう!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1100,6 +1352,7 @@
         "id": "vhqdCkeArwwy"
       },
       "source": [
+        "\r\n",
         "# いまここ"
       ]
     },
@@ -1110,7 +1363,7 @@
       },
       "source": [
         "# いまここ\r\n",
-        "# p. 46"
+        "# p. 53"
       ],
       "execution_count": null,
       "outputs": []
