Colaboratory を使用して作成しました

--- a/haskell_honma_ruichi_ousaka.ipynb
+++ b/haskell_honma_ruichi_ousaka.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell_honma_ruichi_ousaka.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPC9n9fOyXgG+sAc/FBjxzV",
+      "authorship_tag": "ABX9TyP1LVZALSmqt/2ihkOLhjtN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,8 @@
         "を読むノート。\r\n",
         "\r\n",
         "実験学習です。\r\n",
-        "\r\n"
+        "\r\n",
+        "サポートページ https://gihyo.jp/book/2017/978-4-7741-9237-6/support"
       ]
     },
     {
@@ -1117,11 +1118,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IEKuhXKQYiKU",
-        "outputId": "b00a66e4-a958-4138-ac9b-b51b408a8990",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "IEKuhXKQYiKU",
+        "outputId": "b00a66e4-a958-4138-ac9b-b51b408a8990"
       },
       "source": [
         "# 中置演算子 infix operator\r\n",
@@ -1141,11 +1142,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sTPVAY02Y8N0",
-        "outputId": "790c3600-ff83-4f98-bad3-4b9b291945f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sTPVAY02Y8N0",
+        "outputId": "790c3600-ff83-4f98-bad3-4b9b291945f8"
       },
       "source": [
         "# セクション 中置演算子の使い方\r\n",
@@ -1172,11 +1173,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NGtv20dWaGpm",
-        "outputId": "1cbaf20e-eb18-48fd-c8f8-b188125b170a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NGtv20dWaGpm",
+        "outputId": "1cbaf20e-eb18-48fd-c8f8-b188125b170a"
       },
       "source": [
         "# 実験\r\n",
@@ -1196,11 +1197,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MBlLu3VqbSUK",
-        "outputId": "b0309f1b-6c5a-4604-f999-53f469915354",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MBlLu3VqbSUK",
+        "outputId": "b0309f1b-6c5a-4604-f999-53f469915354"
       },
       "source": [
         "# main と do 式\r\n",
@@ -1222,11 +1223,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DI69-uopcB24",
-        "outputId": "dbc95659-20ff-4b61-e1e5-8192def7f313",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "DI69-uopcB24",
+        "outputId": "dbc95659-20ff-4b61-e1e5-8192def7f313"
       },
       "source": [
         "!echo \"太郎\" |runghc test01.hs"
@@ -1341,6 +1342,191 @@
           "output_type": "stream",
           "text": [
             "太郎さん、おはよう!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bkRIU0b9e8i4",
+        "outputId": "827a03a8-f119-47df-fad5-44417d86c5c2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# System.Environment\r\n",
+        "%%writefile test01.hs\r\n",
+        "import System.Environment\r\n",
+        "\r\n",
+        "main = do\r\n",
+        "    let title = \"Current Python: \"\r\n",
+        "    envname <- getEnv \"CLOUDSDK_PYTHON\"\r\n",
+        "    putStr title\r\n",
+        "    putStrLn envname"
+      ],
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lUFyFuItfbP_",
+        "outputId": "715870ef-846c-4551-e233-a439729f5741"
+      },
+      "source": [
+        "!runghc test01.hs"
+      ],
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Current Python: python3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u5Qs3h6Sfmn9"
+      },
+      "source": [
+        "# 環境変数をリストする => printenv, env, set\r\n",
+        "!printenv"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJ2QKZZ3jEGG",
+        "outputId": "6eb69b4d-9a15-42d3-d165-4c0f5383555b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# p.54 の例\r\n",
+        "# 正直悪い例だと思う。 というか do が特殊なので本の全体の始めの段階で込み入った例を出すのはよくない。\r\n",
+        "# putY が出力がないのは IO ではなく、評価がされていないからではないのか。\r\n",
+        "# main へ紐付ける、とは何を言いたいのか。 評価されて IO が云々。\r\n",
+        "%%writefile test01.hs\r\n",
+        "putW, putX :: IO ()\r\n",
+        "putW = putStrLn \"W\"\r\n",
+        "putX = putStrLn \"X\"\r\n",
+        "\r\n",
+        "makePutY, makePutZ :: IO (IO ())\r\n",
+        "makePutY = return $ putStrLn \"Y\"\r\n",
+        "makePutZ = return $ putStrLn \"Z\"\r\n",
+        "\r\n",
+        "main :: IO ()\r\n",
+        "main = do\r\n",
+        "  let w = putW\r\n",
+        "      x = putX\r\n",
+        "\r\n",
+        "  w -- Wが表示される。\r\n",
+        "\r\n",
+        "  putY <- makePutY -- 生成したYを表示するI/OアクションputYをmainへ紐付けていないので、Yは表示されない\r\n",
+        "  \r\n",
+        "  putZ <- makePutZ\r\n",
+        "  putZ -- 生成したI/OアクションputZをmainへ紐付けると、Zが表示される"
+      ],
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting test01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dax-ErVXl_cA",
+        "outputId": "af9dd388-532c-4150-cfac-8b6debd0abf1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc test01.hs"
+      ],
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "W\n",
+            "W\n",
+            "Z\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gqkHLFtfoCBt",
+        "outputId": "691b84e3-87ff-47c3-b957-fcb68af273a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e ':t join'"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:1:1: error: Variable not in scope: join\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GxzdQR34q6_t",
+        "outputId": "b38a7a74-93e0-42ae-f654-75292a499936",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e ':t join'"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "<interactive>:1:1: error: Variable not in scope: join\n"
           ],
           "name": "stdout"
         }
